Navbar background fixes with z-index

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,6 @@
     left: 15em;
     top: 1.5em;
     height: 2em;
-    background-color: red;
     cursor: pointer;
   }
   
@@ -47,7 +46,6 @@
     left: 33%;
     top: 1.5em;
     height: 2em;
-    background-color: green;
     cursor: pointer;
   }
   
